--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".DeleteActivity"></activity>
         <activity android:name=".BaseActivity" />
         <activity android:name=".AddActivity" />
         <activity android:name=".DodoListActivity" />
