--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Edit2Activity"></activity>
+        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".Edit2Activity" />
         <activity android:name=".Edit1Activity" />
         <activity android:name=".DeleteActivity" />
         <activity android:name=".BaseActivity" />
