--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".HuntResultsActivity"></activity>
+        <activity android:name=".LearnActivity"></activity>
+        <activity android:name=".HuntResultsActivity" />
         <activity android:name=".HuntInputActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".Edit2Activity" />
