--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".ReferencesActivity"></activity>
+        <activity android:name=".AboutActivity" />
         <activity android:name=".LearnActivity" />
         <activity android:name=".HuntResultsActivity" />
         <activity android:name=".HuntInputActivity" />
